# opusfun

./: .gitmodules  README.md
01/: .gitignore  build.ps1
02/: .gitignore  build.ps1  play.cpp
03/: .gitignore  WAVFileReader.h  build.ps1  play.cpp
04/: .gitignore  CMakeLists.txt  WAVFileReader.cpp  play.cpp
